--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -44,31 +44,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>What is the difference between an Inner Class ...</td>\n",
        "      <td>An Inner class is a class which is nested with...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>What are the various access specifiers for Jav...</td>\n",
        "      <td>In Java, access specifiers are the keywords us...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>What's the purpose of Static methods and stati...</td>\n",
        "      <td>When there is a requirement to share a method ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>What is data encapsulation and what's its sign...</td>\n",
        "      <td>Encapsulation is a concept in Object Oriented ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
        "      <td>What is a singleton class? Give a practical ex...</td>\n",
        "      <td>A singleton class in java can have only one in...</td>\n",
        "    </tr>\n",
@@ -77,12 +77,12 @@
        "</div>"
       ],
       "text/plain": [
-       "    ID                                           QUESTION  \\\n",
-       "0  1.0  What is the difference between an Inner Class ...   \n",
-       "1  2.0  What are the various access specifiers for Jav...   \n",
-       "2  3.0  What's the purpose of Static methods and stati...   \n",
-       "3  4.0  What is data encapsulation and what's its sign...   \n",
-       "4  5.0  What is a singleton class? Give a practical ex...   \n",
+       "   ID                                           QUESTION  \\\n",
+       "0   1  What is the difference between an Inner Class ...   \n",
+       "1   2  What are the various access specifiers for Jav...   \n",
+       "2   3  What's the purpose of Static methods and stati...   \n",
+       "3   4  What is data encapsulation and what's its sign...   \n",
+       "4   5  What is a singleton class? Give a practical ex...   \n",
        "\n",
        "                                              ANSWER  \n",
        "0  An Inner class is a class which is nested with...  \n",
@@ -92,13 +92,13 @@
        "4  A singleton class in java can have only one in...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('./store/csv/java_question.csv')\n",
+    "data = pd.read_csv('./store/csv/java questions - Sheet1.csv')\n",
     "data.dropna()\n",
     "data = data.fillna('')\n",
     "data.reset_index(drop=True, inplace=True)\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -169,35 +169,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>What is the difference between an Inner Class ...</td>\n",
        "      <td>An Inner class is a class which is nested with...</td>\n",
        "      <td>What is the difference between an Inner Class ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>What are the various access specifiers for Jav...</td>\n",
        "      <td>In Java, access specifiers are the keywords us...</td>\n",
        "      <td>What are the various access specifiers for Jav...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>What's the purpose of Static methods and stati...</td>\n",
        "      <td>When there is a requirement to share a method ...</td>\n",
        "      <td>Whats the purpose of Static methods and static...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>What is data encapsulation and what's its sign...</td>\n",
        "      <td>Encapsulation is a concept in Object Oriented ...</td>\n",
        "      <td>What is data encapsulation and whats its signi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
        "      <td>What is a singleton class? Give a practical ex...</td>\n",
        "      <td>A singleton class in java can have only one in...</td>\n",
        "      <td>What is a singleton class Give a practical exa...</td>\n",
@@ -207,12 +207,12 @@
        "</div>"
       ],
       "text/plain": [
-       "    ID                                           QUESTION  \\\n",
-       "0  1.0  What is the difference between an Inner Class ...   \n",
-       "1  2.0  What are the various access specifiers for Jav...   \n",
-       "2  3.0  What's the purpose of Static methods and stati...   \n",
-       "3  4.0  What is data encapsulation and what's its sign...   \n",
-       "4  5.0  What is a singleton class? Give a practical ex...   \n",
+       "   ID                                           QUESTION  \\\n",
+       "0   1  What is the difference between an Inner Class ...   \n",
+       "1   2  What are the various access specifiers for Jav...   \n",
+       "2   3  What's the purpose of Static methods and stati...   \n",
+       "3   4  What is data encapsulation and what's its sign...   \n",
+       "4   5  What is a singleton class? Give a practical ex...   \n",
        "\n",
        "                                              ANSWER  \\\n",
        "0  An Inner class is a class which is nested with...   \n",
@@ -229,7 +229,7 @@
        "4  What is a singleton class Give a practical exa...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python ('sandbox')",
+   "display_name": "Python 3.9.15 ('nt4rever')",
    "language": "python",
    "name": "python3"
   },
@@ -583,12 +583,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "25a19fbe0a9132dfb9279d48d161753c6352f8f9478c2e74383d340069b907c3"
+    "hash": "a13d72695c8b29f1e7b38f714de16868d519c0f0659bc3581a87d3601c01032b"
    }
   }
  },
