--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "4  A singleton class in java can have only one in...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "4  What is a singleton class Give a practical exa...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,9 +250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\OS\\anaconda3\\envs\\nt4rever\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from sentence_transformers import SentenceTransformer\n",
     "model = SentenceTransformer('./store/all-mpnet-base-v2')"
@@ -269,128 +278,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>QUESTION</th>\n",
-       "      <th>ANSWER</th>\n",
-       "      <th>TOKENIZE</th>\n",
-       "      <th>EMBEDDING</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>What is the difference between an Inner Class ...</td>\n",
-       "      <td>An Inner class is a class which is nested with...</td>\n",
-       "      <td>What is the difference between an Inner Class ...</td>\n",
-       "      <td>[0.0694019, -0.02986107, -0.005415486, 0.04628...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>What are the various access specifiers for Jav...</td>\n",
-       "      <td>In Java, access specifiers are the keywords us...</td>\n",
-       "      <td>What are the various access specifiers for Jav...</td>\n",
-       "      <td>[0.036012873, -0.029415509, 0.019514048, 0.047...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>What's the purpose of Static methods and stati...</td>\n",
-       "      <td>When there is a requirement to share a method ...</td>\n",
-       "      <td>Whats the purpose of Static methods and static...</td>\n",
-       "      <td>[0.054744836, -0.032370344, 0.004369244, -0.05...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>What is data encapsulation and what's its sign...</td>\n",
-       "      <td>Encapsulation is a concept in Object Oriented ...</td>\n",
-       "      <td>What is data encapsulation and whats its signi...</td>\n",
-       "      <td>[-0.016394448, -0.037066396, -0.029610852, 0.0...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>What is a singleton class? Give a practical ex...</td>\n",
-       "      <td>A singleton class in java can have only one in...</td>\n",
-       "      <td>What is a singleton class Give a practical exa...</td>\n",
-       "      <td>[0.041534092, -0.009733305, 0.030775681, 0.023...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    ID                                           QUESTION  \\\n",
-       "0  1.0  What is the difference between an Inner Class ...   \n",
-       "1  2.0  What are the various access specifiers for Jav...   \n",
-       "2  3.0  What's the purpose of Static methods and stati...   \n",
-       "3  4.0  What is data encapsulation and what's its sign...   \n",
-       "4  5.0  What is a singleton class? Give a practical ex...   \n",
-       "\n",
-       "                                              ANSWER  \\\n",
-       "0  An Inner class is a class which is nested with...   \n",
-       "1  In Java, access specifiers are the keywords us...   \n",
-       "2  When there is a requirement to share a method ...   \n",
-       "3  Encapsulation is a concept in Object Oriented ...   \n",
-       "4  A singleton class in java can have only one in...   \n",
-       "\n",
-       "                                            TOKENIZE  \\\n",
-       "0  What is the difference between an Inner Class ...   \n",
-       "1  What are the various access specifiers for Jav...   \n",
-       "2  Whats the purpose of Static methods and static...   \n",
-       "3  What is data encapsulation and whats its signi...   \n",
-       "4  What is a singleton class Give a practical exa...   \n",
-       "\n",
-       "                                           EMBEDDING  \n",
-       "0  [0.0694019, -0.02986107, -0.005415486, 0.04628...  \n",
-       "1  [0.036012873, -0.029415509, 0.019514048, 0.047...  \n",
-       "2  [0.054744836, -0.032370344, 0.004369244, -0.05...  \n",
-       "3  [-0.016394448, -0.037066396, -0.029610852, 0.0...  \n",
-       "4  [0.041534092, -0.009733305, 0.030775681, 0.023...  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('./store/csv/java_encode.csv')"
+    "sen_embeddings = data['EMBEDDING'].to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('store/embeddings.pkl', \"wb\") as fOut:\n",
+    "    pickle.dump({'embeddings': sen_embeddings}, fOut, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   },
   {
